--- a/popup.css
+++ b/popup.css
@@ -6,7 +6,7 @@ body {
   width: 320px;
   height: 200px;
   position: relative;
-  background-image:url('cnm.png');
+  background-image:url('images/cnm.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -17,7 +17,7 @@ body {
 html, body{ margin:0; height:100%; }
 
 #container{
-  background-image: url('background.png');
+  background-image: url('images/background.png');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
